--- a/raumidiscord.core.client/package.json
+++ b/raumidiscord.core.client/package.json
@@ -10,25 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^6.4.5",
+    "@mui/icons-material": "5.8.2",
+    "@mui/lab": "5.0.0-alpha.84",
+    "@mui/material": "5.8.2",
+    "@mui/styles": "5.8.0",
+    "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.13",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react": "17.0.2",
+    "react-custom-scrollbars-2": "4.4.0",
+    "react-dom": "17.0.2",
+    "react-helmet-async": "1.3.0",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.1",
+    "typescript": "4.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/node": "22.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "typescript": "~5.7.0",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.1.1"
   }
 }
