--- a/raumidiscord.core.client/package.json
+++ b/raumidiscord.core.client/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "22.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -24,7 +26,6 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.0",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "@types/node": "22.13"
+    "vite": "^6.0.5"
   }
 }
