--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -24,7 +24,7 @@ jobs:
         uses: release-drafter/release-drafter@v6
         with:
           tag: ${{ env.RELEASE_TAG }}
-          name: Release ${{ env.RELEASE_TAG }}
+          name: v${{ env.RELEASE_TAG }}
           version: ${{ env.RELEASE_TAG }}
           publish: false
     env:
