--- a/raumidiscord.core.client/package.json
+++ b/raumidiscord.core.client/package.json
@@ -21,6 +21,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-virtuoso": "^4.12.5"
   },
   "devDependencies": {
