--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -21,9 +21,9 @@ jobs:
       - name: checkout project
         uses: actions/checkout@v4.2.2
       - name: generate a release note and a version tag
-        uses: release-drafter/release-drafter@v6
+        uses: release-drafter/release-drafter@v6.0.0
         with:
-          config-name: release-drafter.yml
+          tag: v${{ inputs.release_version }}
           publish: false
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
