--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,31 +1,22 @@
-name: Release (master)
+name: Release Drafter
+
 on:
   push:
-    branches: 
+    branches:
       - master
-
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 permissions:
   contents: write
 
 jobs:
-  release:
+  update_release_draft:
     permissions:
-      # githubリリースを作成するには、書き込み権限が必要です。
       contents: write
-      # オートラベリングには書き込みパーミッションが必要です。
-      # そうでない場合は、少なくとも読み込みパーミッションが必要
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - name: checkout project
-        uses: actions/checkout@v4.2.2
-      - name: generate a release note and a version tag
-        uses: release-drafter/release-drafter@v6.0.0
-        with:
-          tag: v${{ inputs.release_version }}
-          publish: false
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-      
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
