--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,16 +2,16 @@ name: Release Drafter
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
+    # オプション。デフォルトはすべて。
     branches:
       - main
       - master
 
-  # pull_request event is required only for autolabeler
+  # pull_requestイベントはオートラベリングにのみ必要です。
   pull_request:
-    # Only following types are handled by the action, but one can default to all as well
+    # アクションが扱うのは以下のタイプだけですが、デフォルトですべてにすることもできます。
     types: [opened, reopened, synchronize]
-  # pull_request_target event is required for autolabeler to support PRs from forks
+  # pull_request_targetイベントは、autolabelerがフォークからのPRをサポートするために必要です。
   # pull_request_target:
   #   types: [opened, reopened, synchronize]
 
@@ -21,21 +21,21 @@ permissions:
 jobs:
   update_release_draft:
     permissions:
-      # write permission is required to create a github release
+      # githubリリースを作成するには、書き込み権限が必要です。
       contents: write
-      # write permission is required for autolabeler
-      # otherwise, read permission is required at least
+      # オートラベラーには書き込み許可が必要
+      # そうでない場合は、少なくとも
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # (Optional) GitHub Enterprise requires GHE_HOST variable set
+      # (オプション) GitHub Enterprise では GHE_HOST 変数の設定が必要です。
       #- name: Set GHE_HOST
       #  run: |
       #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
 
-      # Drafts your next Release notes as Pull Requests are merged into "master"
+      # プルリクエストが "master "にマージされる際に、次のリリースノートを作成します。
       - uses: release-drafter/release-drafter@v6
-        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
+        # (オプション) .github/ からの相対パスで、使用する設定名を指定します。デフォルト: release-drafter.yml
         # with:
         #   config-name: my-config.yml
         #   disable-autolabeler: true
