--- a/RaumiDiscord.Core.Server/RaumiDiscord.Core.Server.csproj
+++ b/RaumiDiscord.Core.Server/RaumiDiscord.Core.Server.csproj
@@ -12,19 +12,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="DeltaRaumi.Common\**" />
+    <Compile Remove="DeltaRaumi.Common\Data\Interfaces\**" />
     <Compile Remove="DeltaRaumi.Controller\**" />
     <Compile Remove="DeltaRaumi.Bot\Configuration\**" />
     <Compile Remove="DeltaRaumi.Bot\SysFile\**" />
-    <Content Remove="DeltaRaumi.Common\**" />
+    <Content Remove="DeltaRaumi.Common\Data\Interfaces\**" />
     <Content Remove="DeltaRaumi.Controller\**" />
     <Content Remove="DeltaRaumi.Bot\Configuration\**" />
     <Content Remove="DeltaRaumi.Bot\SysFile\**" />
-    <EmbeddedResource Remove="DeltaRaumi.Common\**" />
+    <EmbeddedResource Remove="DeltaRaumi.Common\Data\Interfaces\**" />
     <EmbeddedResource Remove="DeltaRaumi.Controller\**" />
     <EmbeddedResource Remove="DeltaRaumi.Bot\Configuration\**" />
     <EmbeddedResource Remove="DeltaRaumi.Bot\SysFile\**" />
-    <None Remove="DeltaRaumi.Common\**" />
+    <None Remove="DeltaRaumi.Common\Data\Interfaces\**" />
     <None Remove="DeltaRaumi.Controller\**" />
     <None Remove="DeltaRaumi.Bot\Configuration\**" />
     <None Remove="DeltaRaumi.Bot\SysFile\**" />
@@ -35,27 +35,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.17.2" />
+    <PackageReference Include="Discord.Net" Version="3.17.4" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-      <Version>9.0.3</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
-    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="9.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Nett" Version="0.15.0" />
+    <PackageReference Include="NUlid" Version="1.7.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.2.efcore.9.0.0" />
-    <PackageReference Include="SixLabors.Fonts" Version="2.1.2" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.5" />
+    <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
     <PackageReference Include="SQLite" Version="3.13.0" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
-    <PackageReference Include="System.Text.Json" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,8 +66,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DeltaRaumi.Bot\Data\Interfaces\" />
-    <Folder Include="Migrations\" />
+    <Folder Include="DeltaRaumi.Database\Migrations\" />
   </ItemGroup>
 
 </Project>
