--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /RaumiDiscord.Core.Server/Assets
 /RaumiDiscord.Core.Server/Temp/Discordicon/128
 /RaumiDiscord.Core.Server/Tests/namecard
+/RaumiDiscord.Core.Server/Resources/Data/DeltaRaumiData.db-journal
