--- a/RaumiDiscord.Core.Server/RaumiDiscord.Core.Server.csproj
+++ b/RaumiDiscord.Core.Server/RaumiDiscord.Core.Server.csproj
@@ -49,7 +49,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Nett" Version="0.15.0" />
     <PackageReference Include="NUlid" Version="1.7.2" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.2.efcore.9.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
