--- a/raumidiscord.core.client/package.json
+++ b/raumidiscord.core.client/package.json
@@ -13,8 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.0",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-charts": "^8.3.1",
+    "@mui/x-data-grid": "^8.3.1",
     "@mui/x-date-pickers": "^8.0.0",
+    "@mui/x-tree-view": "^8.3.1",
+    "@react-spring/web": "^10.0.0",
     "axios": "^1.8.1",
     "chance": "^1.1.12",
     "dayjs": "^1.11.13",
