--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,16 +1,13 @@
-name: Create Release Note
+name: Release Note
 
 on:
-  pull_request:
-    # PRが閉じたタイミングで実行
-    types:
-      - closed
-    # mainブランチのみを対象とする
+  push:
     branches:
       - main
-
+  workflow_dispatch:
+  
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   release:
@@ -19,18 +16,9 @@ jobs:
       contents: write
       # リリースノートを書くためwrite用のpermissionを付与
       pull-requests: write
-    if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release')
     runs-on: ubuntu-latest
     steps:
-      - name: Create Release Tag And Note
+      - uses: release-drafter/release-drafter@v6
         env:
-          # このトークンは自動生成されるのでsecretsを登録する必要ない
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # PRのタイトルと内容をRelease内容に追加する
-          RELEASE_TAG: ${{ github.event.pull_request.title }}
-        uses: release-drafter/release-drafter@v6
-        with:
-          tag: ${{ env.RELEASE_TAG }}
-          name: Release ${{ env.RELEASE_TAG }}
-          version: ${{ env.RELEASE_TAG }}
           publish: false
