データベーススキーマと設定管理の大幅な改善
- 新しいテーブル`Components`、`UserBases`、`UserGuildData`、
  `UserGuildStats`、`GuildBases`、`UrlDataModels`を追加。
- `UserGuildData`にインデックスと外部キー制約を追加。
- TOML形式の設定管理をリファクタリングし、
  `ConfigurationManager`クラスを追加。
- `BotConfiguration`モデルを新規作成。
- `GameCodeMetaData.json`に`shortname`プロパティを追加。
- DIコンテナの構成をリファクタリング。
- マイグレーションファイルを追加し、スキーマ変更を反映。
- コードのリファクタリングと未使用コードの削除。

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 /RaumiDiscord.Core.Server/Temp/Discordicon/128
 /RaumiDiscord.Core.Server/Tests/namecard
 /RaumiDiscord.Core.Server/Resources/Data/DeltaRaumiData.db-journal
+/RaumiDiscord.Core.Server/Resources/Data/DeltaRaumiData.db.bak
