--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd /home/runner/work/RaumiDiscord.Core/raumidiscord.core.client/    
+    - run: cd /home/runner/work/raumidiscord.core.client/    
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
