--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: ls -la    
     - run: cd /home/runner/work/raumidiscord.core.client/    
     - run: npm ci
     - run: npm run build --if-present
