--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: ls -la    
-    - run: cd /home/runner/work/raumidiscord.core.client/    
+    - run: cd ./raumidiscord.core.client/    
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
