--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: ls -la    
-    - run: cd ./raumidiscord.core.client/    
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: |
+        cd ./raumidiscord.core.client/    
+        npm ci
+        npm run build --if-present
+        npm test
