--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: ls -la    
+    - run: npm ci
     - run: |
-        cd ./raumidiscord.core.client/    
-        npm ci
+        cd ./raumidiscord.core.client/
         npm run build --if-present
+    - run: |
+        cd ./raumidiscord.core.client/
         npm test
