--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: ls -la    
-    - run: npm ci
+    - run: |
+        cd ./raumidiscord.core.client/
+        npm ci
     - run: |
         cd ./raumidiscord.core.client/
         npm run build --if-present
